fix:scrollbar issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-
+::-webkit-scrollbar {
+    display: none;
+  }
  @layer base {
     .nav-item{
         @apply py-1.5 px-4 rounded-full text-white/70 font-semibold text-sm hover:bg-white/10 hover:text-white transition duration-300 cursor-pointer;
